2002-07-12  Ken Raeburn  <raeburn@mit.edu>

	* v4rcp.c: Include port-sockets.h.

2002-07-09  Jen Selby <jenselby@mit.edu>

	* login.M: added information about different command line options;
	changed defaults given for tags that did not match code
	* login.c: changed inaccurate comments

2002-07-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogind.c (protocol): Initialize pbp, fbp.  Change left to type
	size_t.

2002-06-27  Jen Selby <jenselby@mit.edu>

	* rsh.M: added warning that encryption does not encrypt the
	command line
	*rlogin.M: added warning that username is sent unencrypted

2002-06-25  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c (kcmd): Don't restrict addresses to IPv4.

	* configure.in: Check for rresvport_af.
	* krshd.c (recvauth): Take sockaddr pointer argument instead of
	sockaddr_in.  Use getnameinfo to extract port number string.
	(remote_addr, remote_port, local_addr, local_port): Make buffers
	bigger.
	(doit): Use sockaddr_storage for local address.  Get rid of all
	settings of non_privileged, since it's never used.  Don't copy
	remote address to local variable.  Use getnameinfo instead of
	inet_ntoa to format addresses and port numbers for environment
	variables.  Create secondary channel socket in same address family
	as primary channel socket; use rresvport_af if available.

	* kcmd.c (setup_secondary_channel): Use select to time out after
	10 minutes, or notice the primary channel being closed or
	receiving data while we wait for the secondary one to be set up.

	* compat_recv.c: New file, moved from lib/krb5util.
	* Makefile.in (SRCS, OBJS): Include it.
	(rcp, kshd, klogind): Link against it instead of krb5util
	library.
	* defines.h (krb5_compat_recvauth, krb5_compat_recvauth_version):
	Move declarations here from include/k5-util.h.
	(princ_maps_to_lname, default_realm): Declare.

	* kcmd.c (kcmd_connect): Use strdup when copying hostname.
	(princ_maps_to_lname, default_realm): Move functions here...