@@ -2,9 +2,9 @@
 .\" All rights reserved.  The Berkeley software License Agreement
 .\" specifies the terms and conditions for redistribution.
 .\"
-.\"	@(#)rlogind.8c	6.3 (Berkeley) 5/24/86
+.\"	@(#)rlogind.8	6.3 (Berkeley) 5/24/86
 .\"
-.TH KLOGIND 8C
+.TH KLOGIND 8
 .SH NAME
 klogind \- remote login server
 .SH SYNOPSIS
@@ -17,13 +17,13 @@ klogind \- remote login server
 .SH DESCRIPTION
 .I Klogind
 is the server for the 
-.IR rlogin (1C)
+.IR rlogin (1)
 program.  The server is 
-based on rlogind(8C) but uses Kerberos authentication.
+based on rlogind(8) but uses Kerberos authentication.
 .PP
 The 
 .I klogind
-server is invoked by \fIinetd(8c)\fP when it receives a connection on
+server is invoked by \fIinetd(8)\fP when it receives a connection on
 the port indicated in /etc/inetd.conf.  A typical /etc/inetd.conf
 configuration line for \fIklogind\fP might be:
 
@@ -117,7 +117,7 @@ client is connecting from a privileged port, before allowing login.
 The parent of the login process manipulates the master side of the
 pseduo terminal, operating as an intermediary between the login
 process and the client instance of the
-.I rlogin(1C)
+.I rlogin(1)
 program.  In normal operation, the packet protocol described in
 .IR pty (4)
 is invoked to provide ^S/^Q type facilities and propagate interrupt
@@ -191,6 +191,6 @@ by the server failed.
 .br
 The user's login shell could not be started.
 .SH SEE ALSO
-rlogind(8C), rlogin(1C)
+rlogind(8), rlogin(1)
 .SH BUGS
 A more extensible protocol should be used.
